Fri Nov 10 15:38:52 CET 2006 Christian Anthon <anthon@kiku.dk>

	* fonts/Makefile.am, flags/Makefile.am: Add flags and fonts to
	EXTRA_DIST

Fri Nov 10 12:23:52 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, configure.in, render.c,
	board3d/font3d.c,board3d/inc3d.h, fonts/ : added vera fonts 
	* gnubg.c: removed Convert function
	* render.c: fixed talisman crash bug
	* gnubgmodule.c: hopefully fixed AMD64 relational database crash

Tue Nov  7 14:12:40 CET 2006 Christian Anthon <anthon@kiku.dk>

	* eval.c: update to eval.c 1.295

Tue Nov  7 12:21:01 CET 2006 Christian Anthon <anthon@kiku.dk>

	* po/: updated gnubg.pot and .po files. Removed fuzzy.
	* configure.in: version updated to 0.15
	* flags/: added dir

Wed Oct 18 14:54:34 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, gtkgame.c, flags/.cvsignore,
	flags/Makefile.am: automake and install stuff for the new flags

Wed Oct 18 09:31:12 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkgame.c, postscript.c, sgf.c: charset
	conversion cleanup

Tue Oct 17 15:03:08 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: avoid assuming length of translated strings

Mon Oct 16 15:45:49 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Correct locales. Call language changes directly instead
	of through UserCommand.
	* gnubg.c: Use environment locale. Replace putenv by setenv.

Thu Oct  12 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkoptions.c, flags dir: Added new dialog to set language

Thu Oct  5 23:51:15 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Fix compiler warnings without USE_PYTHON after last
	commit

Wed Oct  4 14:18:35 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am analysis.c, analysis.h, formatgs.c, formatgs.h, html.c,
	text.c: minor changes to allow "relational show details"
	* database, database.example: rename