@@ -1,0 +1,3 @@
+nonsrc = copying.c credits.c credits.h external_l.c external_y.c \
+	    external_y.h gnubg.xml README sgfl.c sgfp.c sgfp.h
+EXTRA_DIST = $(nonsrc)
