@@ -1,3 +1,8 @@
+Mon Nov 13 12:16:54 CET 2006 Christian Anthon <anthon@kiku.dk>
+
+	* Makefile.am, configure.in, board3d/Makefile.am, lib/Makefile.am,
+	non-src/Makfile.am: Add various files to EXTRA_DIST or sources.
+
 Fri Nov 10 15:38:52 CET 2006 Christian Anthon <anthon@kiku.dk>
 
 	* fonts/Makefile.am, flags/Makefile.am: Add flags and fonts to
